--- a/packages/ibm-products-styles/src/components/AddSelect/_add-select.scss
+++ b/packages/ibm-products-styles/src/components/AddSelect/_add-select.scss
@@ -1,5 +1,5 @@
 //
-// Copyright IBM Corp. 2022, 2022
+// Copyright IBM Corp. 2022, 2025
 //
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
@@ -10,6 +10,7 @@
 @use '@carbon/styles/scss/spacing' as *;
 @use '@carbon/styles/scss/type';
 @use '@carbon/type/scss/font-family' as *;
+@use '@carbon/styles/scss/config';
 
 // Standard imports.
 @use '../../global/styles/project-settings' as *;
@@ -60,7 +61,7 @@ $tearsheet-class: #{$pkg-prefix}--tearsheet;
     justify-content: center;
   }
 
-  &-dropdown .cds--dropdown {
+  &-dropdown .#{config.$prefix}--dropdown {
     background: transparent;
   }
 
@@ -120,8 +121,8 @@ $tearsheet-class: #{$pkg-prefix}--tearsheet;
     color: $interactive;
   }
 
-  button.#{$block-class}__selections-view-children.#{$carbon-prefix}--btn--ghost.#{$carbon-prefix}--btn--icon-only
-    .#{$carbon-prefix}--btn__icon
+  button.#{$block-class}__selections-view-children.#{config.$prefix}--btn--ghost.#{config.$prefix}--btn--icon-only
+    .#{config.$prefix}--btn__icon
     path {
     fill: currentColor;
   }
@@ -260,7 +261,7 @@ $tearsheet-class: #{$pkg-prefix}--tearsheet;
     display: flex;
   }
 
-  .#{$carbon-prefix}--overflow-menu {
+  .#{config.$prefix}--overflow-menu {
     border-block-end: 1px solid $border-strong-01;
   }
 }
@@ -359,11 +360,11 @@ button.#{$block-class}__global-filter-toggle {
 
 // overrides
 
-.#{$block-class}__selections .#{$carbon-prefix}--list-box__menu {
+.#{$block-class}__selections .#{config.$prefix}--list-box__menu {
   inset-inline-start: auto;
 }
 
-.#{$block-class}__tags .#{$carbon-prefix}--tag {
+.#{$block-class}__tags .#{config.$prefix}--tag {
   margin: 0;
 }
 
@@ -375,7 +376,7 @@ button.#{$block-class}__global-filter-toggle {
 
 .#{$block-class}.#{$tearsheet-class}.#{$tearsheet-class}--wide
   .#{$tearsheet-class}__content
-  .cds--dropdown {
+  .#{config.$prefix}--dropdown {
   background-color: transparent;
 }
 
@@ -389,7 +390,7 @@ button.#{$block-class}__global-filter-toggle {
 }
 
 .#{$block-class}.#{$block-class}__multi
-  .#{$pkg-prefix}--action-set.#{$carbon-prefix}--btn-set.#{$pkg-prefix}--action-set--max
+  .#{$pkg-prefix}--action-set.#{config.$prefix}--btn-set.#{$pkg-prefix}--action-set--max
   .#{$pkg-prefix}--action-set__action-button {
   max-inline-size: 11.25rem;
 }
@@ -399,27 +400,27 @@ button.#{$block-class}__global-filter-toggle {
 }
 
 .#{$block-class}
-  .#{$carbon-prefix}--modal-container--sm
-  .#{$carbon-prefix}--modal-content
+  .#{config.$prefix}--modal-container--sm
+  .#{config.$prefix}--modal-content
   p {
   padding-inline-end: 0;
 }
 
-.#{$block-class} .#{$carbon-prefix}--radio-button__appearance {
+.#{$block-class} .#{config.$prefix}--radio-button__appearance {
   margin: 0 $spacing-05 0 0;
 }
 
 .#{$block-class}
-  .#{$carbon-prefix}--radio-button-wrapper
-  .#{$carbon-prefix}--radio-button__label {
+  .#{config.$prefix}--radio-button-wrapper
+  .#{config.$prefix}--radio-button__label {
   justify-content: left;
 }
 
-.#{$block-class} .#{$carbon-prefix}--breadcrumb .#{$carbon-prefix}--link {
+.#{$block-class} .#{config.$prefix}--breadcrumb .#{config.$prefix}--link {
   cursor: pointer;
 }
 
-.#{$block-class} .#{$carbon-prefix}--accordion__item {
+.#{$block-class} .#{config.$prefix}--accordion__item {
   &:hover .#{$block-class}__sidebar-accordion-title button {
     opacity: 1;
   }
@@ -434,36 +435,36 @@ button.#{$block-class}__global-filter-toggle {
   max-inline-size: 16rem;
 }
 
-.#{$block-class} .#{$carbon-prefix}--accordion__arrow {
+.#{$block-class} .#{config.$prefix}--accordion__arrow {
   transform: rotate(0deg);
 }
 
 .#{$block-class}
-  .#{$carbon-prefix}--accordion__item--active
-  .#{$carbon-prefix}--accordion__arrow {
+  .#{config.$prefix}--accordion__item--active
+  .#{config.$prefix}--accordion__arrow {
   transform: rotate(90deg);
 }
 
 .#{$block-class}
-  .#{$carbon-prefix}--accordion--start
-  .#{$carbon-prefix}--accordion__arrow {
+  .#{config.$prefix}--accordion--start
+  .#{config.$prefix}--accordion__arrow {
   margin: 0 0 0 $spacing-05;
 }
 
 .#{$block-class}
-  .#{$carbon-prefix}--accordion--start
-  .#{$carbon-prefix}--accordion__title {
+  .#{config.$prefix}--accordion--start
+  .#{config.$prefix}--accordion__title {
   margin: 0 $spacing-05 0 $spacing-03;
 }
 
 .#{$block-class}
-  .#{$carbon-prefix}--accordion__item--active
-  .#{$carbon-prefix}--accordion__content {
+  .#{config.$prefix}--accordion__item--active
+  .#{config.$prefix}--accordion__content {
   margin-block-start: $spacing-03;
   padding-block: 0;
 }
 
-.#{$block-class} + div .#{$carbon-prefix}--tooltip,
-.#{$block-class} + div .#{$carbon-prefix}--overflow-menu-options {
+.#{$block-class} + div .#{config.$prefix}--tooltip,
+.#{$block-class} + div .#{config.$prefix}--overflow-menu-options {
   z-index: 9000;
 }
