fix: review comments

--- a/packages/ibm-products-web-components/examples/truncated-text/src/styles.scss
+++ b/packages/ibm-products-web-components/examples/truncated-text/src/styles.scss
@@ -13,6 +13,6 @@
 
 :root {
   @include theme.theme(themes.$white);
-  background-color: var(--cds-background);
-  color: var(--cds-text-primary);
+  background-color: $background;
+  color: $text-primary;
 }
