fix(notification panel): hover style

--- a/packages/ibm-products-web-components/src/components/notification-panel/notification.scss
+++ b/packages/ibm-products-web-components/src/components/notification-panel/notification.scss
@@ -140,3 +140,9 @@ $block-notification-class: #{$prefix}--notifications-panel__notification;
     background-color: transparent;
   }
 }
+
+:host(.#{$block-notification-class}--next) {
+  &::before {
+    background-color: transparent;
+  }
+}
