--- a/packages/ibm-products-web-components/src/components/notification-panel/notification-panel.scss
+++ b/packages/ibm-products-web-components/src/components/notification-panel/notification-panel.scss
@@ -52,8 +52,8 @@ $block-class-action-set: #{$prefix}--action-set;
   position: sticky;
   z-index: 2;
   background-color: $layer-01;
-  block-size: 2.5rem;
+  block-size: $spacing-08;
   border-block-start: 1px solid $border-subtle-01;
   inset-block-end: 0;
-  min-block-size: 2.5rem;
+  min-block-size: $spacing-08;
 }
