--- a/packages/ibm-products-web-components/src/components/notification-panel/story-styles.scss
+++ b/packages/ibm-products-web-components/src/components/notification-panel/story-styles.scss
@@ -101,10 +101,23 @@ $block-class: #{$prefix}--notifications-panel;
     }
   }
 }
-.#{$block-class}__notification__notification-title {
+.#{$block-class}__notification-title {
   @include type.type-style('heading-01');
 
   color: $text-secondary;
   margin-block-end: $spacing-02;
   @include font-weight('regular');
+}
+
+.#{$block-class}__notification-title-unread {
+  color: $text-secondary;
+  margin-block-end: $spacing-02;
+  @include font-weight('semibold');
+}
+.#{$story-prefix}__notification-trigger {
+  svg {
+    circle {
+      fill: rgb(218, 30, 40);
+    }
+  }
 }
