feat: set of users example

--- a/packages/ibm-products-web-components/src/components/user-avatar/user-avatar.scss
+++ b/packages/ibm-products-web-components/src/components/user-avatar/user-avatar.scss
@@ -28,8 +28,9 @@ $carbon-prefix: 'cds';
 $block-class: #{$prefix}--user-avatar;
 
 :host(#{$prefix}-user-avatar) {
-  @extend .#{$block-class};
-  @extend .#{$block-class}__tooltip;
+  .#{$block-class} {
+    box-sizing: border-box;
+  }
 }
 
 :host(#{$prefix}-user-avatar) .#{$block-class}--xl {
