fix: box sizing on user avatar

--- a/packages/ibm-products-web-components/src/components/user-avatar/user-avatar.scss
+++ b/packages/ibm-products-web-components/src/components/user-avatar/user-avatar.scss
@@ -29,6 +29,10 @@ $block-class: #{$prefix}--user-avatar;
 
 :host(#{$prefix}-user-avatar) {
   display: inline-block;
+
+  .#{$block-class} {
+    box-sizing: border-box;
+  }
 }
 
 :host(#{$prefix}-user-avatar) .#{$block-class}--xl {
