--- a/packages/ibm-products-web-components/examples/set-of-users/src/styles.scss
+++ b/packages/ibm-products-web-components/examples/set-of-users/src/styles.scss
@@ -14,8 +14,18 @@
 
 :root {
   @include theme.theme(themes.$white);
-  background-color: var(--cds-background);
-  color: var(--cds-text-primary);
+}
+
+:root[data-carbon-theme='g10'] {
+  @include theme.theme(themes.$g10);
+}
+
+:root[data-carbon-theme='g90'] {
+  @include theme.theme(themes.$g90);
+}
+
+:root[data-carbon-theme='g100'] {
+  @include theme.theme(themes.$g100);
 }
 
 section {
