--- a/packages/ibm-products-web-components/src/components/page-header/page-header.scss
+++ b/packages/ibm-products-web-components/src/components/page-header/page-header.scss
@@ -26,9 +26,13 @@ $carbon-prefix: 'cds';
   // TODO: remove above styles when styles from React have been migrated
   // and use the extend below
   // @extend .#{$prefix}--page-header;
+  position: sticky;
   display: block;
   background-color: $layer-01;
   border-block-end: 1px solid $border-subtle-01;
+  /* custom css property used from calculation of header offset */
+  /* stylelint-disable-next-line carbon/layout-use */
+  inset-block-start: var(--c4p-page-header-header-top);
 }
 
 :host(#{$prefix}-page-header-breadcrumb),
@@ -40,7 +44,13 @@ $carbon-prefix: 'cds';
 }
 
 :host(#{$prefix}-page-header-breadcrumb) {
+  position: sticky;
+  background-color: $layer-01;
   block-size: convert.to-rem(40px);
+
+  /* custom css property used from calculation of breadcrumb offset */
+  /* stylelint-disable-next-line carbon/layout-use */
+  inset-block-start: var(--c4p-page-header-breadcrumb-top);
   // TODO: remove above styles when styles from React have been migrated
   // and use the extend below
   // @extend .#{$prefix}--page-header__breadcrumb-bar;
