--- a/packages/ibm-products-web-components/src/patterns/overflow/story-styles.scss
+++ b/packages/ibm-products-web-components/src/patterns/overflow/story-styles.scss
@@ -15,6 +15,7 @@
 
 .parent {
   margin-block-start: spacing.$spacing-04;
+  min-block-size: 6rem;
   // min-height: 560px;
   // height: 100%;
   // resize: horizontal;
