--- a/packages/ibm-products-web-components/examples/set-of-tags/src/set-of-tags.scss
+++ b/packages/ibm-products-web-components/examples/set-of-tags/src/set-of-tags.scss
@@ -20,53 +20,57 @@ $carbon-prefix: 'cds';
 
 $block-class: #{$prefix}--set-of-tags;
 
-#tag-container {
-  box-sizing: border-box;
-}
-cds-tag {
-  min-inline-size: unset;
-}
-.popover-container {
-  // .dismissible-tag-container {
-  //   display: flex;
-  //   justify-content: end;
-  // }
+:host {
+  .#{$block-class} {
+    box-sizing: border-box;
+    display: flex;
+    white-space: nowrap;
 
-  .popover-tag {
-    @include type.type-style('label-02');
-    margin: 0;
+    &__popover-container {
+      padding: 0.9rem;
+
+      .#{$block-class}__popover-tag {
+        @include type.type-style('label-02');
+        margin: 0;
+      }
+
+      cds-dismissible-tag {
+        margin: $spacing-01 0;
+      }
+    }
+
+    &__view-all {
+      margin-top: $spacing-03;
+      display: block;
+    }
+
+    &__modal-tags-search {
+      margin-block-start: $spacing-05;
+    }
+
+    &__modal-tags-container {
+      cds-dismissible-tag {
+        margin: $spacing-02 $spacing-03 $spacing-02 0;
+      }
+    }
   }
 
-  cds-dismissible-tag {
-    margin: $spacing-01 0;
+  // Suppress custom elements until styles are loaded
+  #{$carbon-prefix}-tag:not(:defined),
+  #{$carbon-prefix}-dismissible-tag:not(:defined),
+  #{$carbon-prefix}-operational-tag:not(:defined) {
+    display: none;
   }
-}
 
-.modal-tags-container {
-  cds-dismissible-tag {
-    margin: $spacing-02 $spacing-03 $spacing-02 0;
+  cds-modal-header {
+    padding-inline: $spacing-05;
   }
-}
 
-.view-all {
-  margin-top: $spacing-03;
-  display: block;
-}
+  cds-modal-body {
+    @extend .#{$carbon-prefix}--modal-scroll-content;
 
-.tags-search {
-  margin-block-start: $spacing-05;
-}
-
-cds-modal-header {
-  padding-inline: $spacing-05;
-}
-
-cds-modal-body {
-  @extend .#{$carbon-prefix}--modal-scroll-content;
-
-  overflow: auto;
-
-  @include breakpoint-up(md) {
-    block-size: 300px;
+    cds-tag {
+      margin-inline-start: 0;
+    }
   }
 }
