--- a/packages/ibm-products-styles/src/components/TruncatedText/_index.scss
+++ b/packages/ibm-products-styles/src/components/TruncatedText/_index.scss
@@ -4,7 +4,5 @@
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
 //
-.truncated-text-stories__viewport {
-  inline-size: 100%;
-  max-inline-size: 300px;
-}
+
+@use './truncated-text';
