--- a/packages/ibm-products-styles/src/components/_index-with-carbon.scss
+++ b/packages/ibm-products-styles/src/components/_index-with-carbon.scss
@@ -1,5 +1,5 @@
 //
-// Copyright IBM Corp. 2021, 2021
+// Copyright IBM Corp. 2021, 2025
 //
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
@@ -51,6 +51,7 @@
 @use './SimpleHeader/index-with-carbon' as *;
 @use './BigNumbers/index-with-carbon' as *;
 @use './TruncatedList/index-with-carbon' as *;
+@use './TruncatedText/index-with-carbon' as *;
 @use './InterstitialScreen/index-with-carbon' as *;
 @use './Coachmark/index-with-carbon' as *;
 @use './CoachmarkBeacon/index-with-carbon' as *;
