--- a/packages/ibm-products-styles/src/components/_index.scss
+++ b/packages/ibm-products-styles/src/components/_index.scss
@@ -1,5 +1,5 @@
 //
-// Copyright IBM Corp. 2021, 2023
+// Copyright IBM Corp. 2021, 2025
 //
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
@@ -64,6 +64,7 @@
 @use './NonLinearReading';
 @use './BigNumbers';
 @use './TruncatedList';
+@use './TruncatedText';
 @use './InterstitialScreen';
 @use './DelimitedList';
 @use './Decorator';
